Bug 267213 - Assert that element is in UA shadow tree in userAgentPart methods
Summary: Assert that element is in UA shadow tree in userAgentPart methods
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: DOM (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Tim Nguyen (:ntim)
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2024-01-07 14:49 PST by Tim Nguyen (:ntim)
Modified: 2024-01-08 11:34 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tim Nguyen (:ntim) 2024-01-07 14:49:41 PST
Something is going pretty wrong if we're using those for elements outside of UA shadow trees.
Comment 1 Radar WebKit Bug Importer 2024-01-07 14:50:13 PST
<rdar://problem/120616043>
Comment 2 Tim Nguyen (:ntim) 2024-01-07 14:56:16 PST
Pull request: https://github.com/WebKit/WebKit/pull/22492
Comment 3 EWS 2024-01-08 11:34:06 PST
Committed 272782@main (0deb0517a697): <https://commits.webkit.org/272782@main>

Reviewed commits have been landed. Closing PR #22492 and removing active labels.