Assert that element is in UA shadow tree in userAgentPart methods https://bugs.webkit.org/show_bug.cgi?id=267213 rdar://120616043

Reviewed by Ryosuke Niwa.

These methods should never be called on elements outside of UA shadow trees. It's a very likely a bug if they are.

Fix/restructure some code so the assertion holds true everywhere.

* Source/WebCore/css/SelectorChecker.cpp:
(WebCore::SelectorChecker::matchRecursively const):
* Source/WebCore/dom/Element.cpp:
(WebCore::Element::userAgentPart const):
(WebCore::Element::setUserAgentPart):
* Source/WebCore/inspector/agents/InspectorDOMAgent.cpp:
(WebCore::InspectorDOMAgent::highlightSelector):
* Source/WebCore/style/ElementRuleCollector.cpp:
(WebCore::Style::ElementRuleCollector::collectMatchingUserAgentPartRules):
* Source/WebCore/style/StyleAdjuster.cpp:
(WebCore::Style::Adjuster::adjust const):
* Source/WebCore/style/StyleSharingResolver.cpp:
(WebCore::Style::SharingResolver::canShareStyleWithElement const):

Canonical link: https://commits.webkit.org/272782@main